Settings: add activity for Labs
Change-Id: I76c3a5dbf7127fea64ddb072c1c659b19ec1e733
Signed-off-by: Mr_ZerO <rbesar210311@gmail.com>
Signed-off-by: ryzenforce990 <ryzenforce990@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5181,6 +5181,63 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".Settings$LockscreenActivity"
+                  android:label="@string/lockscreen_title"
+                  android:exported="true">
+            <intent-filter android:priority="1">
+                <action android:name="com.everest.basecamp.categories.LockScreenSettings" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="71">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.everest.basecamp.categories.LockScreenSettings" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                       android:value="@string/menu_key_about_device"/>
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                       android:value="true" />
+        </activity>
+
+        <activity android:name=".Settings$ThemeActivity"
+                  android:label="@string/theme_title"
+                  android:exported="true">
+            <intent-filter android:priority="1">
+                <action android:name="com.everest.basecamp.categories.ThemeSettings" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="71">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.everest.basecamp.categories.ThemeSettings" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                       android:value="@string/menu_key_about_device"/>
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                       android:value="true" />
+        </activity>
+
+        <activity android:name=".Settings$FontsPickerActivity"
+                  android:label="@string/category_fonts_title"
+                  android:exported="true">
+            <intent-filter android:priority="1">
+                <action android:name="com.everest.basecamp.fragments.FontsPicker" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="71">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.everest.basecamp.fragments.FontsPicker" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                       android:value="@string/menu_key_about_device"/>
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                       android:value="true" />
+        </activity>
+
         <activity
             android:name=".spa.SpaActivity"
             android:configChanges="orientation|screenLayout|screenSize|smallestScreenSize"
